# fd-rs

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.cargo/: config.toml  katex.html
examples/conservation/: README.md  main.rs
examples/conservation-parallel/: README.md  main.rs
fdm/: all.html  index.html  sidebar-items.js  type.BoxedEquation.html  type.BoxedFunction.html  type.BoxedScheme.html
fdm/base/: index.html  sidebar-items.js  struct.Simluation.html  trait.Equation.html
fdm/equations/: index.html  sidebar-items.js  struct.Advection.html  struct.InviscidBurger.html
fdm/schemes/: index.html  sidebar-items.js  struct.BeamWarming.html  struct.LaxFriedrichs.html  struct.LaxWendroff.html  struct.Upwind.html  trait.Scheme.html
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/fdm/schemes/: trait.Scheme.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: base.rs  equations.rs  lib.rs  main.rs  schemes.rs
src/fdm/: base.rs.html  equations.rs.html  lib.rs.html  schemes.rs.html
