[package]
name = "fd-rs"
version = "0.1.0"
authors = ["yuanyuyuan <az6980522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = { path = "../../RustGnuplot/gnuplot" }
ndarray = { path = "../../ndarray" }
failure = { path = "../../failure" }
num-traits = "^0.2.1"
itertools = "^0.9.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", ".cargo/katex.html" ]
